--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "barryvdh/laravel-dompdf": "^3.1",
         "intervention/image": "^2.7",
         "laravel/framework": "^11.31",
+        "laravel/reverb": "^1.0",
         "laravel/tinker": "^2.9",
+        "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-medialibrary": "^11.11",
         "spatie/laravel-model-status": "^1.18",
         "spatie/laravel-permission": "^6.10",
