--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/reverb": "^1.0",
         "laravel/tinker": "^2.9",
         "pusher/pusher-php-server": "^7.2",
+        "spatie/laravel-activitylog": "^4.10",
         "spatie/laravel-medialibrary": "^11.11",
         "spatie/laravel-model-status": "^1.18",
         "spatie/laravel-permission": "^6.10",
