--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "spatie/laravel-medialibrary": "^11.11",
         "spatie/laravel-model-status": "^1.18",
         "spatie/laravel-permission": "^6.10",
-        "spatie/laravel-sluggable": "^3.7"
+        "spatie/laravel-sluggable": "^3.7",
+        "tecnickcom/tcpdf": "^6.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
