--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "league/csv": "^9.22",
         "maatwebsite/excel": "^3.1",
         "pusher/pusher-php-server": "^7.2",
-        "setasign/fpdi": "*",
+        "setasign/fpdf": "^1.8",
+        "setasign/fpdi": "^2.6",
         "setasign/fpdi-fpdf": "^2.3",
         "spatie/laravel-activitylog": "^4.10",
         "spatie/laravel-medialibrary": "^11.11",
